# ankicardgen

./: .gitignore  PRD.md
pdf_to_anki_flashcard_generator/: .gitignore  README.md  pyproject.toml  test_output.apkg
pdf_to_anki_flashcard_generator/examples/decks/: komplexitaet_evidenzbasiert.apkg
pdf_to_anki_flashcard_generator/pdf_to_anki_flashcard_generator/: .env  komplexitaet_evidenzbasiert.apkg  komplexitaet_lecture_cards.apkg  komplexitaet_lecture_cards_de.apkg  main.py
pdf_to_anki_flashcard_generator/src/ankicardgen/: main.py
pdf_to_anki_flashcard_generator/web_app/: README.md  api.py  package-lock.json  package.json  run.sh  run_api.sh
pdf_to_anki_flashcard_generator/web_app/src/app/: page.tsx
pdf_to_anki_flashcard_generator/web_app/src/app/components/: FileUploader.tsx  FormSettings.tsx  ProcessingStatus.tsx
